added grafana in docker-compose-couch.yaml and uploaded node-app

--- a/fabric_codes/test-net/docker/docker-compose-couch.yaml
+++ b/fabric_codes/test-net/docker/docker-compose-couch.yaml
@@ -96,3 +96,12 @@ services:
       - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=adminpw
     depends_on:
       - couchdb2
+  
+  grafana:
+    container_name: grafana
+    image: grafana/grafana:latest
+    ports:
+      - "3000:3000"
+    networks:
+      - test
+
