--- a/fabric_codes/test-net/configtx/configtx.yaml
+++ b/fabric_codes/test-net/configtx/configtx.yaml
@@ -22,7 +22,7 @@ Organizations:
     # ID to load the MSP definition as
     ID: OrdererMSP
     # MSPDir is the filesystem path which contains the MSP configuration
-    MSPDir: ../organizations/ordererOrganizations/example.com/msp
+    MSPDir: ../organizations/ordererOrganizations/iot-fabric.com/msp
     # Policies defines the set of policies at this level of the config tree
     # For organization policies, their canonical path is usually
     #   /Channel/<Application|Orderer>/<OrgName>/<PolicyName>
@@ -37,14 +37,14 @@ Organizations:
         Type: Signature
         Rule: "OR('OrdererMSP.admin')"
     OrdererEndpoints:
-      - orderer.example.com:7050
+      - orderer.iot-fabric.com:7050
   - &Org1
     # DefaultOrg defines the organization which is used in the sampleconfig
     # of the fabric.git development environment
     Name: Org1MSP
     # ID to load the MSP definition as
     ID: Org1MSP
-    MSPDir: ../organizations/peerOrganizations/org1.example.com/msp
+    MSPDir: ../organizations/peerOrganizations/org1.iot-fabric.com/msp
     # Policies defines the set of policies at this level of the config tree
     # For organization policies, their canonical path is usually
     #   /Channel/<Application|Orderer>/<OrgName>/<PolicyName>
@@ -62,7 +62,7 @@ Organizations:
         Type: Signature
         Rule: "OR('Org1MSP.peer')"
     AnchorPeers:
-        - Host: peer0.org1.example.com
+        - Host: peer0.org1.iot-fabric.com
           Port: 7051
 
   - &Org2
@@ -71,7 +71,7 @@ Organizations:
     Name: Org2MSP
     # ID to load the MSP definition as
     ID: Org2MSP
-    MSPDir: ../organizations/peerOrganizations/org2.example.com/msp
+    MSPDir: ../organizations/peerOrganizations/org2.iot-fabric.com/msp
     # Policies defines the set of policies at this level of the config tree
     # For organization policies, their canonical path is usually
     #   /Channel/<Application|Orderer>/<OrgName>/<PolicyName>
@@ -89,7 +89,7 @@ Organizations:
         Type: Signature
         Rule: "OR('Org2MSP.peer')"
     AnchorPeers:
-        - Host: peer0.org2.example.com
+        - Host: peer0.org2.iot-fabric.com
           Port: 9051
   - &Org3
     # DefaultOrg defines the organization which is used in the sampleconfig
@@ -97,7 +97,7 @@ Organizations:
     Name: Org3MSP
     # ID to load the MSP definition as
     ID: Org3MSP
-    MSPDir: ../organizations/peerOrganizations/org3.example.com/msp
+    MSPDir: ../organizations/peerOrganizations/org3.iot-fabric.com/msp
     # Policies defines the set of policies at this level of the config tree
     # For organization policies, their canonical path is usually
     #   /Channel/<Application|Orderer>/<OrgName>/<PolicyName>
@@ -115,7 +115,7 @@ Organizations:
         Type: Signature
         Rule: "OR('Org3MSP.peer')"
     AnchorPeers:
-        - Host: peer0.org3.example.com
+        - Host: peer0.org3.iot-fabric.com
           Port: 11051
 ################################################################################
 #
@@ -218,7 +218,7 @@ Orderer: &OrdererDefaults
   # as TLS validation.  The preferred way to specify orderer addresses is now
   # to include the OrdererEndpoints item in your org definition
   Addresses:
-    - orderer.example.com:7050
+    - orderer.iot-fabric.com:7050
   # Batch Timeout: The amount of time to wait before creating a batch
   BatchTimeout: 2s
   # Batch Size: Controls the number of messages batched into a block
@@ -299,16 +299,16 @@ Profiles:
       OrdererType: etcdraft
       EtcdRaft:
         Consenters:
-          - Host: orderer.example.com
+          - Host: orderer.iot-fabric.com
             Port: 7050
-            ClientTLSCert: ../organizations/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
-            ServerTLSCert: ../organizations/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
+            ClientTLSCert: ../organizations/ordererOrganizations/iot-fabric.com/orderers/orderer.iot-fabric.com/tls/server.crt
+            ServerTLSCert: ../organizations/ordererOrganizations/iot-fabric.com/orderers/orderer.iot-fabric.com/tls/server.crt
       Organizations:
         - *OrdererOrg
       Capabilities: *OrdererCapabilities
     #   TLS:
     #     RootCerts:
-    #       - ../organizations/ordererOrganizations/example.com/orderers/orderer.example.com/tls/ca.crt
+    #       - ../organizations/ordererOrganizations/iot-fabric.com/orderers/orderer.iot-fabric.com/tls/ca.crt
 
     Application:
       <<: *ApplicationDefaults
@@ -325,16 +325,16 @@ Profiles:
       OrdererType: etcdraft
       EtcdRaft:
         Consenters:
-          - Host: orderer.example.com
+          - Host: orderer.iot-fabric.com
             Port: 7050
-            ClientTLSCert: ../organizations/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
-            ServerTLSCert: ../organizations/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
+            ClientTLSCert: ../organizations/ordererOrganizations/iot-fabric.com/orderers/orderer.iot-fabric.com/tls/server.crt
+            ServerTLSCert: ../organizations/ordererOrganizations/iot-fabric.com/orderers/orderer.iot-fabric.com/tls/server.crt
       Organizations:
         - *OrdererOrg
       Capabilities: *OrdererCapabilities
     #   TLS:
     #     RootCerts:
-    #       - ../organizations/ordererOrganizations/example.com/orderers/orderer.example.com/tls/ca.crt
+    #       - ../organizations/ordererOrganizations/iot-fabric.com/orderers/orderer.iot-fabric.com/tls/ca.crt
 
     Application:
       <<: *ApplicationDefaults
@@ -350,16 +350,16 @@ Profiles:
       OrdererType: etcdraft
       EtcdRaft:
         Consenters:
-          - Host: orderer.example.com
+          - Host: orderer.iot-fabric.com
             Port: 7050
-            ClientTLSCert: ../organizations/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
-            ServerTLSCert: ../organizations/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
+            ClientTLSCert: ../organizations/ordererOrganizations/iot-fabric.com/orderers/orderer.iot-fabric.com/tls/server.crt
+            ServerTLSCert: ../organizations/ordererOrganizations/iot-fabric.com/orderers/orderer.iot-fabric.com/tls/server.crt
       Organizations:
         - *OrdererOrg
       Capabilities: *OrdererCapabilities
     #   TLS:
     #     RootCerts:
-    #       - ../organizations/ordererOrganizations/example.com/orderers/orderer.example.com/tls/ca.crt
+    #       - ../organizations/ordererOrganizations/iot-fabric.com/orderers/orderer.iot-fabric.com/tls/ca.crt
 
     Application:
       <<: *ApplicationDefaults
@@ -375,16 +375,16 @@ Profiles:
       OrdererType: etcdraft
       EtcdRaft:
         Consenters:
-          - Host: orderer.example.com
+          - Host: orderer.iot-fabric.com
             Port: 7050
-            ClientTLSCert: ../organizations/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
-            ServerTLSCert: ../organizations/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
+            ClientTLSCert: ../organizations/ordererOrganizations/iot-fabric.com/orderers/orderer.iot-fabric.com/tls/server.crt
+            ServerTLSCert: ../organizations/ordererOrganizations/iot-fabric.com/orderers/orderer.iot-fabric.com/tls/server.crt
       Organizations:
         - *OrdererOrg
       Capabilities: *OrdererCapabilities
     #   TLS:
     #     RootCerts:
-    #       - ../organizations/ordererOrganizations/example.com/orderers/orderer.example.com/tls/ca.crt
+    #       - ../organizations/ordererOrganizations/iot-fabric.com/orderers/orderer.iot-fabric.com/tls/ca.crt
 
     Application:
       <<: *ApplicationDefaults
