--- a/fabric_codes/test-net/docker/docker-compose-couch.yaml
+++ b/fabric_codes/test-net/docker/docker-compose-couch.yaml
@@ -27,7 +27,7 @@ services:
     networks:
       - test
 
-  peer0.org1.example.com:
+  peer0.org1.iot-fabric.com:
     environment:
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
       - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb0:5984
@@ -56,7 +56,7 @@ services:
     networks:
       - test
 
-  peer0.org2.example.com:
+  peer0.org2.iot-fabric.com:
     environment:
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
       - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb1:5984
@@ -85,7 +85,7 @@ services:
     networks:
       - test
 
-  peer0.org3.example.com:
+  peer0.org3.iot-fabric.com:
     environment:
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
       - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb1:5984
