--- a/fabric_codes/test-net/docker/docker-compose-test-net.yaml
+++ b/fabric_codes/test-net/docker/docker-compose-test-net.yaml
@@ -6,10 +6,10 @@
 version: '3.7'
 
 volumes:
-  orderer.example.com:
-  peer0.org1.example.com:
-  peer0.org2.example.com:
-  peer0.org3.example.com:
+  orderer.iot-fabric.com:
+  peer0.org1.iot-fabric.com:
+  peer0.org2.iot-fabric.com:
+  peer0.org3.iot-fabric.com:
 
 networks:
   test:
@@ -17,8 +17,8 @@ networks:
 
 services:
 
-  orderer.example.com:
-    container_name: orderer.example.com
+  orderer.iot-fabric.com:
+    container_name: orderer.iot-fabric.com
     image: hyperledger/fabric-orderer:2.5.4
     labels:
       service: hyperledger-fabric
@@ -46,15 +46,15 @@ services:
       - ORDERER_ADMIN_TLS_CLIENTROOTCAS=[/var/hyperledger/orderer/tls/ca.crt]
 
       - ORDERER_ADMIN_LISTENADDRESS=0.0.0.0:7053
-      - ORDERER_OPERATIONS_LISTENADDRESS=orderer.example.com:9443
+      - ORDERER_OPERATIONS_LISTENADDRESS=orderer.iot-fabric.com:9443
       - ORDERER_METRICS_PROVIDER=prometheus
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric
     command: orderer
     volumes:
         # - ../system-genesis-block/genesis.block:/var/hyperledger/orderer/orderer.genesis.block
-        - ../organizations/ordererOrganizations/example.com/orderers/orderer.example.com/msp:/var/hyperledger/orderer/msp
-        - ../organizations/ordererOrganizations/example.com/orderers/orderer.example.com/tls/:/var/hyperledger/orderer/tls
-        - orderer.example.com:/var/hyperledger/production/orderer
+        - ../organizations/ordererOrganizations/iot-fabric.com/orderers/orderer.iot-fabric.com/msp:/var/hyperledger/orderer/msp
+        - ../organizations/ordererOrganizations/iot-fabric.com/orderers/orderer.iot-fabric.com/tls/:/var/hyperledger/orderer/tls
+        - orderer.iot-fabric.com:/var/hyperledger/production/orderer
     ports:
       - 7050:7050
       - 7053:7053
@@ -62,8 +62,8 @@ services:
     networks:
       - test
 
-  peer0.org1.example.com:
-    container_name: peer0.org1.example.com
+  peer0.org1.iot-fabric.com:
+    container_name: peer0.org1.iot-fabric.com
     image: hyperledger/fabric-peer:2.5.4
     labels:
       service: hyperledger-fabric
@@ -80,15 +80,15 @@ services:
       - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/tls/ca.crt
 
       # Peer specific variables
-      - CORE_PEER_ID=peer0.org1.example.com
-      - CORE_PEER_ADDRESS=peer0.org1.example.com:7051
+      - CORE_PEER_ID=peer0.org1.iot-fabric.com
+      - CORE_PEER_ADDRESS=peer0.org1.iot-fabric.com:7051
       - CORE_PEER_LISTENADDRESS=0.0.0.0:7051
-      - CORE_PEER_CHAINCODEADDRESS=peer0.org1.example.com:7052
+      - CORE_PEER_CHAINCODEADDRESS=peer0.org1.iot-fabric.com:7052
       - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:7052
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org1.example.com:7051
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org1.example.com:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org1.iot-fabric.com:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org1.iot-fabric.com:7051
       - CORE_PEER_LOCALMSPID=Org1MSP
-      - CORE_OPERATIONS_LISTENADDRESS=peer0.org1.example.com:9444
+      - CORE_OPERATIONS_LISTENADDRESS=peer0.org1.iot-fabric.com:9444
       - CORE_METRICS_PROVIDER=prometheus
       - CHAINCODE_AS_A_SERVICE_BUILDER_CONFIG={"peername":"peer0org1"}
       - CORE_CHAINCODE_EXECUTETIMEOUT=300s
@@ -96,9 +96,9 @@ services:
 
     volumes:
         - ${DOCKER_SOCK}:/host/var/run/docker.sock
-        - ../organizations/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/msp:/etc/hyperledger/fabric/msp
-        - ../organizations/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/tls:/etc/hyperledger/fabric/tls
-        - peer0.org1.example.com:/var/hyperledger/production
+        - ../organizations/peerOrganizations/org1.iot-fabric.com/peers/peer0.org1.iot-fabric.com/msp:/etc/hyperledger/fabric/msp
+        - ../organizations/peerOrganizations/org1.iot-fabric.com/peers/peer0.org1.iot-fabric.com/tls:/etc/hyperledger/fabric/tls
+        - peer0.org1.iot-fabric.com:/var/hyperledger/production
     # working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
     working_dir: /root
     command: peer node start
@@ -108,8 +108,8 @@ services:
     networks:
       - test
 
-  peer0.org2.example.com:
-    container_name: peer0.org2.example.com
+  peer0.org2.iot-fabric.com:
+    container_name: peer0.org2.iot-fabric.com
     image: hyperledger/fabric-peer:2.5.4
     labels:
       service: hyperledger-fabric
@@ -125,15 +125,15 @@ services:
       - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/fabric/tls/server.key
       - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/tls/ca.crt
       # Peer specific variables
-      - CORE_PEER_ID=peer0.org2.example.com
-      - CORE_PEER_ADDRESS=peer0.org2.example.com:9051
+      - CORE_PEER_ID=peer0.org2.iot-fabric.com
+      - CORE_PEER_ADDRESS=peer0.org2.iot-fabric.com:9051
       - CORE_PEER_LISTENADDRESS=0.0.0.0:9051
-      - CORE_PEER_CHAINCODEADDRESS=peer0.org2.example.com:9052
+      - CORE_PEER_CHAINCODEADDRESS=peer0.org2.iot-fabric.com:9052
       - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:9052
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org2.example.com:9051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org2.example.com:9051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org2.iot-fabric.com:9051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org2.iot-fabric.com:9051
       - CORE_PEER_LOCALMSPID=Org2MSP
-      - CORE_OPERATIONS_LISTENADDRESS=peer0.org2.example.com:9445
+      - CORE_OPERATIONS_LISTENADDRESS=peer0.org2.iot-fabric.com:9445
       - CORE_METRICS_PROVIDER=prometheus
       - CHAINCODE_AS_A_SERVICE_BUILDER_CONFIG={"peername":"peer0org2"}
       - CORE_CHAINCODE_EXECUTETIMEOUT=300s
@@ -142,9 +142,9 @@ services:
   
     volumes:
         - ${DOCKER_SOCK}:/host/var/run/docker.sock
-        - ../organizations/peerOrganizations/org2.example.com/peers/peer0.org2.example.com/msp:/etc/hyperledger/fabric/msp
-        - ../organizations/peerOrganizations/org2.example.com/peers/peer0.org2.example.com/tls:/etc/hyperledger/fabric/tls
-        - peer0.org2.example.com:/var/hyperledger/production
+        - ../organizations/peerOrganizations/org2.iot-fabric.com/peers/peer0.org2.iot-fabric.com/msp:/etc/hyperledger/fabric/msp
+        - ../organizations/peerOrganizations/org2.iot-fabric.com/peers/peer0.org2.iot-fabric.com/tls:/etc/hyperledger/fabric/tls
+        - peer0.org2.iot-fabric.com:/var/hyperledger/production
     # working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
     working_dir: /root
 
@@ -155,8 +155,8 @@ services:
     networks:
       - test
 
-  peer0.org3.example.com:
-    container_name: peer0.org3.example.com
+  peer0.org3.iot-fabric.com:
+    container_name: peer0.org3.iot-fabric.com
     image: hyperledger/fabric-peer:2.5.4
     labels:
       service: hyperledger-fabric
@@ -172,15 +172,15 @@ services:
       - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/fabric/tls/server.key
       - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/tls/ca.crt
       # Peer specific variables
-      - CORE_PEER_ID=peer0.org3.example.com
-      - CORE_PEER_ADDRESS=peer0.org3.example.com:11051
+      - CORE_PEER_ID=peer0.org3.iot-fabric.com
+      - CORE_PEER_ADDRESS=peer0.org3.iot-fabric.com:11051
       - CORE_PEER_LISTENADDRESS=0.0.0.0:11051
-      - CORE_PEER_CHAINCODEADDRESS=peer0.org3.example.com:11052
+      - CORE_PEER_CHAINCODEADDRESS=peer0.org3.iot-fabric.com:11052
       - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:11052
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org3.example.com:11051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org3.example.com:11051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org3.iot-fabric.com:11051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org3.iot-fabric.com:11051
       - CORE_PEER_LOCALMSPID=Org3MSP
-      - CORE_OPERATIONS_LISTENADDRESS=peer0.org3.example.com:9446
+      - CORE_OPERATIONS_LISTENADDRESS=peer0.org3.iot-fabric.com:9446
       - CORE_METRICS_PROVIDER=prometheus
       - CHAINCODE_AS_A_SERVICE_BUILDER_CONFIG={"peername":"peer0org3"}
       - CORE_CHAINCODE_EXECUTETIMEOUT=300s
@@ -189,9 +189,9 @@ services:
   
     volumes:
         - ${DOCKER_SOCK}:/host/var/run/docker.sock
-        - ../organizations/peerOrganizations/org3.example.com/peers/peer0.org3.example.com/msp:/etc/hyperledger/fabric/msp
-        - ../organizations/peerOrganizations/org3.example.com/peers/peer0.org3.example.com/tls:/etc/hyperledger/fabric/tls
-        - peer0.org3.example.com:/var/hyperledger/production
+        - ../organizations/peerOrganizations/org3.iot-fabric.com/peers/peer0.org3.iot-fabric.com/msp:/etc/hyperledger/fabric/msp
+        - ../organizations/peerOrganizations/org3.iot-fabric.com/peers/peer0.org3.iot-fabric.com/tls:/etc/hyperledger/fabric/tls
+        - peer0.org3.iot-fabric.com:/var/hyperledger/production
     # working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
     working_dir: /root
 
@@ -220,8 +220,8 @@ services:
         - ../organizations:/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations
         - ../scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
     depends_on:
-      - peer0.org1.example.com
-      - peer0.org2.example.com
-      - peer0.org3.example.com
+      - peer0.org1.iot-fabric.com
+      - peer0.org2.iot-fabric.com
+      - peer0.org3.iot-fabric.com
     networks:
       - test
