--- a/fabric_codes/test-net/organizations/ccp-template.yaml
+++ b/fabric_codes/test-net/organizations/ccp-template.yaml
@@ -11,20 +11,20 @@ organizations:
   Org${ORG}:
     mspid: Org${ORG}MSP
     peers:
-    - peer0.org${ORG}.example.com
+    - peer0.org${ORG}.iot-fabric.com
     certificateAuthorities:
-    - ca.org${ORG}.example.com
+    - ca.org${ORG}.iot-fabric.com
 peers:
-  peer0.org${ORG}.example.com:
+  peer0.org${ORG}.iot-fabric.com:
     url: grpcs://localhost:${P0PORT}
     tlsCACerts:
       pem: |
           ${PEERPEM}
     grpcOptions:
-      ssl-target-name-override: peer0.org${ORG}.example.com
-      hostnameOverride: peer0.org${ORG}.example.com
+      ssl-target-name-override: peer0.org${ORG}.iot-fabric.com
+      hostnameOverride: peer0.org${ORG}.iot-fabric.com
 certificateAuthorities:
-  ca.org${ORG}.example.com:
+  ca.org${ORG}.iot-fabric.com:
     url: https://localhost:${CAPORT}
     caName: ca-org${ORG}
     tlsCACerts:
